--- a/Listados/WEB-INF/web.xml
+++ b/Listados/WEB-INF/web.xml
@@ -8,19 +8,35 @@
   <description> Servicios de viandas </description>
   <display-name> Servicios de viandas </display-name>
 
-	<servlet>
+	<!--  <servlet>
 		<servlet-name>Home</servlet-name>
 		<servlet-class>servlets.HomeServlet</servlet-class>
+		 <init-param>
+		<param-name>ipServidor</param-name>
+		<param-value>127.0.0.1</param-value>
+	</init-param>
+	<init-param>
+		<param-name>puertoServidor</param-name>
+		<param-value>1099</param-value>
+	</init-param>
 	</servlet>
 	
 	<servlet-mapping>
 		<servlet-name>Home</servlet-name>
 		<url-pattern>/Home</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping>  -->
 
   <servlet>
     <servlet-name>ListadoGeneralViandas</servlet-name>
     <servlet-class>servlets.ListadoGeneralViandasServlet</servlet-class>
+    <init-param>
+		<param-name>ipServidor</param-name>
+		<param-value>127.0.0.1</param-value>
+	</init-param>
+	<init-param>
+		<param-name>puertoServidor</param-name>
+		<param-value>1099</param-value>
+	</init-param>
   </servlet>
  
   <servlet-mapping>
@@ -31,6 +47,14 @@
   <servlet>
     <servlet-name>ListadoViandasDescripcion</servlet-name>
     <servlet-class>servlets.ListadoViandasDescripcionServlet</servlet-class>
+    <init-param>
+		<param-name>ipServidor</param-name>
+		<param-value>127.0.0.1</param-value>
+	</init-param>
+	<init-param>
+		<param-name>puertoServidor</param-name>
+		<param-value>1099</param-value>
+	</init-param>
   </servlet>
  
   <servlet-mapping>
@@ -41,6 +65,14 @@
   <servlet>
     <servlet-name>ViandaDetalle</servlet-name>
     <servlet-class>servlets.ViandaDetalleServlet</servlet-class>
+    <init-param>
+		<param-name>ipServidor</param-name>
+		<param-value>127.0.0.1</param-value>
+	</init-param>
+	<init-param>
+		<param-name>puertoServidor</param-name>
+		<param-value>1099</param-value>
+	</init-param>
   </servlet>
  
   <servlet-mapping>
